--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,12 @@ ExportedObj/
 *.opendb
 
 # Unity3D generated meta files
-*.pidb.meta
-*.pdb.meta
+#*.pidb.meta
+#*.pdb.meta
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
 
 # Builds
-*.apk
-*.unitypackage
+#*.apk
+#*.unitypackage
